# central-heating-controller

./: .gitignore  README.md  hacs.json  pyproject.toml
custom_components/central_heating_controller/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  learning.py  manifest.json  models.py  number.py  policy.py  repairs.py  sensor.py  storage.py  strings.json  switch.py  travel.py
custom_components/central_heating_controller/translations/: en.json
docs/: lovelace-card.md
docs/superpowers/plans/: 2026-06-28-central-heating-controller.md  2026-06-29-lovelace-heating-cards.md
docs/superpowers/specs/: 2026-06-28-central-heating-controller-design.md  2026-06-29-lovelace-heating-cards-design.md
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entities.py  test_learning.py  test_manifest.py  test_policy.py  test_travel.py
tests/js/: central-heating-controller-card.test.mjs  dom-shim.mjs  fixtures.mjs
www/: central-heating-controller-card.js
