[project]
name = "central-heating-controller"
version = "0.1.0"
description = "Home Assistant central heating controller integration"
requires-python = ">=3.14.2"
dependencies = []

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-homeassistant-custom-component==0.13.340",
    "ruff==0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py314"
